--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@stripe/stripe-js": "^4.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.1",
     "lucide-react": "^0.456.0",
@@ -21,6 +22,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
     "reactflow": "^11.11.4",
+    "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "uuid": "^11.0.3",
     "zustand": "^5.0.1"
