--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@headlessui/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@react-email/components": "^0.0.28",
+    "@react-email/render": "^1.0.2",
     "@stripe/stripe-js": "^4.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
