--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
@@ -29,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
