--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
     "@stripe/stripe-js": "^4.10.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.1",
@@ -39,6 +40,7 @@
     "nodemailer": "^6.9.16",
     "openai": "^4.72.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
     "reactflow": "^11.11.4",
