--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
@@ -52,6 +53,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "reactflow": "^11.11.4",
     "sonner": "^1.7.1",
