--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/starter-kit": "^2.10.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.1",
