--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "reactflow": "^11.11.4",
+    "recharts": "^2.15.0",
     "sonner": "^1.7.1",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.5",
