--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "openai": "^4.72.0",
     "react": "19.0.0-rc-66855b96-20241106",
