--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
